Added debug methods to LoopTools interface and small updates in the examples.

--- a/README
+++ b/README
@@ -12,7 +12,12 @@ It is based on:
     Laurent series expansion,"
     JHEP 1206 (2012) 095  [arXiv:1203.0291 [hep-ph]].
 
-It can be compiled and installed with the commands
+
+
+Installing Ninja
+----------------
+
+Ninja can be compiled and installed with the commands
 
     ./configure
     make
@@ -25,6 +30,9 @@ library use --with-avholo[=FLAGS] during configuration e.g.
     make
     make install
 
+note: recent versions of OneLoop should be compiled setting
+      "TLEVEL = yes" in the "Config" file.
+
 In order to compile the built-in interface to the LoopTools library
 use --with-looptools[=FLAGS] during configuration e.g.
 
@@ -33,11 +41,21 @@ use --with-looptools[=FLAGS] during configuration e.g.
     make install
 
 note: since LoopTools is a static library, you will also need to link
-your executables with it.
+      your executables with it.
 
 For a full list of available options type
 
     ./configure --help
+
+If you specified the --prefix option, add the directory where the
+library is installed to your LD_LIBRARY_PATH environment variable, if
+not already present (it is usually a sub-directory lib/ or lib64/ of
+the one specified with --prefix).
+
+
+
+Installing the package NinjaNumGen
+----------------------------------
 
 The Python package NinjaNumGen can be used both as a Python module and
 as a script in order to generate the input needed for Ninja.  You can
@@ -50,4 +68,6 @@ The command
     
     python setup.py --help
 
-will give a list of installation options.
+will give a list of installation options.  If you specified the
+--prefix option during installation, update your PATH and PYTHONPATH
+environment variables accordingly.
