--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Author: Tiziano Peraro                                            
                                                                   
-Based on:                                                         
+The algorithm implemented in the library is based on:
                                                                   
     P. Mastrolia, E. Mirabella and T. Peraro,                     
     "Integrand reduction of one-loop scattering amplitudes through
