Fixed incompatibilities between NinjaNumGen and latest version of Form

--- a/README
+++ b/README
@@ -103,3 +103,6 @@ in the utils/ directory.  The command
 will give a list of installation options.  If you specified the
 --prefix option during installation, update your PATH and PYTHONPATH
 environment variables accordingly.
+
+note: NinjaNumGen requires Form-4 or later.  You can obtain Form at
+      http://www.nikhef.nl/~form
