Added arXiv number to AUTHORS, README and banner.  Added COPYING for public release.

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,4 @@ The algorithm implemented in the library is based on:
     T. Peraro,
     "Ninja: Automated Integrand Reduction via Laurent Expansion for
     One-Loop Amplitudes,"
-    arXiv:xxxx.xxxx [hep-ph]
+    arXiv:1403.1229 [hep-ph]
