--- a/README
+++ b/README
@@ -15,7 +15,7 @@ It is based on:
     T. Peraro,
     "Ninja: Automated Integrand Reduction via Laurent Expansion for
     One-Loop Amplitudes,"
-    arXiv:xxxx.xxxx [hep-ph]
+    arXiv:1403.1229 [hep-ph]
 
 
 
