--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,4 @@ The algorithm implemented in the library is based on:
     T. Peraro,
     "Ninja: Automated Integrand Reduction via Laurent Expansion for
     One-Loop Amplitudes,"
-    arXiv:1403.1229 [hep-ph]
+    Comput. Phys. Commun. 185 (2014) 2771 [arXiv:1403.1229 [hep-ph]]
